--- a/style.css
+++ b/style.css
@@ -1,23 +1,29 @@
-body{ 
+body {
     text-align: center;
-    background:rgb(160, 247, 247);
-}   
+    background: linear-gradient( rgb(121, 202, 220), rgb(55, 137, 232));
+}
 .capa{
     width: 100%;
 }
 .beneficios{
-    background-color: rgba(249, 240, 240, 0.957);
     text-align: left;
+    display: inline-block;
+}
+.beneficios h2{
+    text-align: center;
 }
 ul{
     display: inline-block;
     vertical-align: top;
-    font-size: 20px;
-    margin-right: 200px;
+    font-size: 26px;
+    margin-right: 300px;
+    margin-left: 50px;
 }
 li{
     padding: 20px;
 }
 .foto-beneficios{
-    width: 40%;
+    width: 35%;
+    border-radius: 20px;
+    box-shadow: 2px 2px 4px #000000;
 }
